bug fixed, now it can install latest version of node/npm properly

--- a/jenkins-server.template
+++ b/jenkins-server.template
@@ -349,6 +349,10 @@
                                     "Ref" : "AWS::Region"
                                 },
                                 "\n",
+                                "# Install Node\n",
+                                "yum install -y gcc-c++ make\n",
+                                "curl -sL https://rpm.nodesource.com/setup_6.x | bash -\n",
+                                "yum install -y nodejs --nogpgcheck\n",
                                 "# Install Jenkins\n",
                                 "wget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat/jenkins.repo\n",
                                 "rpm --import http://pkg.jenkins-ci.org/redhat/jenkins-ci.org.key\n",
@@ -360,18 +364,6 @@
                                 "# Wait 30 seconds to allow Jenkins to startup\n",
                                 "echo \"Waiting 30 seconds for Jenkins to start.....\"\n",
                                 "sleep 30\n",
-                                "yum install openssl openssl-devel\n",
-                                "yum groupinstall \"Development Tools\"\n",
-                                "git clone git@github.com:nodejs/node.git\n",
-                                "cd node\n",
-                                "./configure\n",
-                                "make\n",
-                                "make install\n",
-                                "yum install curl\n",
-                                "PATH=$PATH:/home/ec2-user/node\n",
-                                "export PATH\n",
-                                "yum install curl\n",
-                                "curl https://www.npmjs.com/install.sh | sh\n",
                                 "# Install the required plugins\n",
                                 "cd /var/lib/jenkins/plugins\n",
                                 "curl -O -L https://updates.jenkins-ci.org/latest/multiple-scms.hpi\n",
